Only sort feature sets at output time